# geektools

./: .gitignore  Buildtag.md  CLAUDE.md  Cargo.toml  README.md  README_CN.md  STABILITY_TEST_REPORT.md  TODO.md  allrelease.sh  install.sh  sponsors.md
.cargo/: config.toml
.github/workflows/: release.yml
docs/: core-stability-improvements.md  geektools_plugin_generator.sh  plugin-development-guide.md  plugin-marketplace-implementation.md  plugin-marketplace-server.md
plugin_server/: README.md  app.js  index.html
plugin_server/server/: .env.example  Cargo.toml  test.sh
plugin_server/server/config/: config.yaml
plugin_server/server/src/handlers/: auth.rs
plugin_server/server/src/services/: auth.rs  mod.rs
plugin_server/server/src/utils/: config.rs
src/: config.rs  errors.rs  fileio.rs  logging.rs  main.rs  recovery.rs
src/i18n/: en_us.json  mod.rs  zh_cn.json
src/plugins/: marketplace.rs  mod.rs
src/scripts/: cleanmac.link  enable_ai.link  info.json  installbrew.sh  installthing.sh  mod.rs
