[package]
name = "geektools"
version = "0.5.2"
edition = "2024"
repository = "PeterFujiyu/geektools"

[dependencies]
reqwest     = { version = "0.12.20", default-features = false, features = ["blocking", "rustls-tls", "json"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
once_cell = "1.18.0"
rust-embed = { version = "8", features = ["include-exclude"] }
rand = "0.9.1"
chrono = { version = "0.4", features = ["clock"] }
flate2 = "1.1.2"
tar = "0.4.44"
